--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -12,7 +12,7 @@
 #
 # To use a different locale, set it with `I18n.locale`:
 #
-#     I18n.locale = :es
+    # I18n.locale = :fr
 #
 # This would use the information in config/locales/es.yml.
 #
@@ -29,3 +29,7 @@
 
 en:
   hello: "Hello world"
+
+fr:
+  date:
+    abbr_day_names: [dim, lun, mar, mer, jeu, ven, sam]
