--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -1,4 +1,3 @@
 fr:
   date:
-    abbr_day_names: [dimanche, lundi, mardi, merdi, jeudi, vendredi, samdi]
-
+    abbr_day_names: [dimanche, lundi, mardi, mercredi, jeudi, vendredi, samedi]
