--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -1,3 +1,3 @@
 fr:
   date:
-    abbr_day_names: [dimanche, lundi, mardi, mercredi, jeudi, vendredi, samedi]
+    abbr_day_names: [Dimanche, Lundi, Mardi, Mercredi, Jeudi, Vendredi, Samedi]
