--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -1,3 +1,4 @@
 fr:
   date:
     abbr_day_names: [Dimanche, Lundi, Mardi, Mercredi, Jeudi, Vendredi, Samedi]
+    month_names : [~, Janvier, Février, Mars, Avril, Mai, Juin, Juillet, Août, Septembre, Octobre, Novembre, Décembre]
